tests/typechecker/fail/011-let.hyg
let x: int = 3;
let y: string = {
    let z: int = 4;
    x + z
};
println(x + x)
